--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 /* Style the cart container */
-#cart-container {
+#cart-button {
   position: fixed;
   top: 40%;
   right: 0;
@@ -21,12 +21,12 @@ body {
   z-index: 999;
 }
 
-#cart-container h4,
-#cart-container p {
+#cart-button h4,
+#cart-button p {
   margin: 0;
 }
 
-#cart-container:hover {
+#cart-button:hover {
   cursor: pointer;
 }
 
@@ -66,9 +66,9 @@ body {
 #cart-details {
   position: fixed;
   top: 0;
-  right: -350px;
+  right: -440px;
   height: 100vh;
-  width: 350px;
+  width: 440px;
   background-color: white;
   color: black;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
@@ -90,7 +90,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 24px;
+  padding: 20px;
   border-bottom: 1px solid #eee;
 }
 
