feat: Add cart button styles

--- a/style.css
+++ b/style.css
@@ -8,16 +8,14 @@ body {
   position: fixed;
   top: 40%;
   right: 0;
-  width: 100px;
-  height: 120px;
   background-color: #f9f9f9;
   border: 1px solid #ccc;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 6px;
   justify-content: space-between;
   z-index: 999;
 }
@@ -29,6 +27,33 @@ body {
 
 #cart-button:hover {
   cursor: pointer;
+}
+
+.cart-top {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  background-color: black;
+  color: white;
+  padding: 12px 20px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.cart-items h4 {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16px;
+}
+
+.cart-price {
+  display: flex;
+  padding: 6px 20px 12px 20px;
+}
+
+.cart-price p {
+  font-size: 13px;
+  line-height: 14px;
 }
 
 /* Style for cart top (icon and items together) */
